--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "postandroid": "adb reverse tcp:3333 tcp:3333",
     "ios": "react-native run-ios",
+    "prestart": "yarn install",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
